--- a/src/css/RightContainer.css
+++ b/src/css/RightContainer.css
@@ -1,11 +1,12 @@
 .right-container {
     width: 50%;
     height: 100%;
-    overflow-y: auto;
     position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
-.view-resume-p {
+.view-resume-p, .view-all-projects-p {
     font-weight: 700;
 }
 
@@ -14,7 +15,7 @@
 }
 
 .view-resume-p span::before {
-    content: "—— "
+    content: "—— ";
 }
 
 .view-resume-p:hover span::before {
@@ -25,15 +26,37 @@
     color: rgb(250, 262, 284);
 }
 
+.view-all-projects-p span::before {
+    content: "—— ";
+}
+
+.view-all-projects-p:hover span::before {
+    content: "——— ";
+}
+
+.view-all-projects-p:hover {
+    color: rgb(250, 262, 284);
+}
+
 .projects-container {
-    margin-top: 75px;
+    margin-top: 35px;
     width: 100%;
-    height: auto;
+    height: fit-content;
 }
 
 .project {
     display: flex;
     gap: 30px;
+    align-items: center;
+    height: fit-content;
+    width: 100%;
+    transition: background-color 0.3s ease;
+    padding: 15px;
+}
+
+.project:hover {
+    background-color: rgb(22,35,65);
+    border-radius: 10px;
 }
 
 .project-text {
@@ -42,4 +65,12 @@
 
 .project.not-first {
     margin-top: 50px;
+}
+
+.project-a-tag:visited {
+    color: inherit;
+}
+
+.view-all-projects-p:visited {
+    color: rgb(148, 163, 184);
 }
