--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -25,7 +25,7 @@
     display: grid;
     grid-template-columns: repeat(2, minmax(400px, 1fr));
     grid-auto-rows: auto;
-    grid-row-gap: 20px;
-    grid-column-gap: 50px;
+    row-gap: 20px;
+    column-gap: 50px;
     margin: 0 auto;
 }
