--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -7,7 +7,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: 100vh;
+    background-color: rgb(16, 23, 42);
 }
 
 .projects-header1 {
