--- a/src/css/RightContainer.css
+++ b/src/css/RightContainer.css
@@ -79,6 +79,10 @@
     color: rgb(148, 163, 184);
 }
 
+.view-all-projects-p {
+    color: rgb(148, 163, 184);
+}
+
 .project-desc {
     white-space: break-spaces;
 }
