--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -25,7 +25,7 @@
 .project-grid {
     display: grid;
     grid-template-columns: repeat(2, minmax(400px, 1fr));
-    grid-auto-rows: auto;
+    grid-auto-rows: minmax(0, 1fr);
     row-gap: 20px;
     column-gap: 50px;
     margin: 0 auto;
